# VaniFlow

./: .env.example  .gitignore  ENHANCEMENT_PLAN.md  README.md  VaaniFlow_Phase4_Credibility_And_Launch_Plan.md  pyproject.toml  requirements.txt  run_tests.sh
api/: __init__.py  dependencies.py  main.py
api/middleware/: logging_middleware.py
api/routes/: health.py  jobs.py  metrics.py  stats.py
docker/: Dockerfile  docker-compose.yml
scripts/: validate_emotion_classifier.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_full_pipeline.py
tests/unit/: test_ambient.py  test_back_translation.py  test_boundary_optimizer.py  test_cache.py  test_code_switch.py  test_cost_tracker.py  test_embedding_scorer.py  test_emotion.py  test_job_repository.py  test_lipsync.py  test_pipeline.py  test_pronunciation.py  test_providers.py  test_qc.py  test_retry.py  test_subtitles.py
ui/: index.html
vaaniflow/: __init__.py  config.py  exceptions.py  metrics.py  models.py  pipeline.py
vaaniflow/audio/: __init__.py  ambient_separator.py  extractor.py  normalizer.py  stitcher.py
vaaniflow/cache/: __init__.py  redis_cache.py
vaaniflow/cost/: __init__.py
vaaniflow/emotion/: __init__.py  detector.py
vaaniflow/lipsync/: __init__.py
vaaniflow/normalization/: __init__.py  code_switch_normalizer.py
vaaniflow/pronunciation/: __init__.py  corrector.py  indian_lexicon.py
vaaniflow/providers/: __init__.py  base.py
vaaniflow/providers/transcription/: assembly_provider.py  base.py  whisper_provider.py
vaaniflow/providers/translation/: base.py  google_provider.py  sarvam_provider.py
vaaniflow/providers/tts/: base.py  elevenlabs_provider.py  gtts_provider.py  sarvam_provider.py
vaaniflow/qc/: __init__.py  models.py  pipeline.py
vaaniflow/quality/: __init__.py  back_translation.py  embedding_scorer.py
vaaniflow/repository/: __init__.py  job_repository.py
vaaniflow/segmentation/: __init__.py  boundary_optimizer.py
vaaniflow/subtitles/: __init__.py  generator.py
vaaniflow/utils/: __init__.py  logging.py  retry.py  timing.py
