[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaaniflow"
version = "2.0.0"
description = "Production-grade multilingual async dubbing pipeline for 11+ Indian languages"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VaaniFlow Team"},
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "redis[asyncio]>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "gTTS>=2.5.0",
    "prometheus-client>=0.20.0",
    "librosa>=0.10.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
include = ["vaaniflow*", "api*"]
